Fixing bug 188959, HIDDEN attribute on EMBED should hide, r=av, sr=kin, a=asa